# slamrs

./: Cargo.toml  README.md  baseui-106f9fb11825184c.js  baseui-106f9fb11825184c_bg.wasm  baseui-1c35e4043b5bc368.js  baseui-1c35e4043b5bc368_bg.wasm  baseui-21196db68d9ee7a0.js  baseui-21196db68d9ee7a0_bg.wasm  baseui-38fc07b9a3bbb8b8.js  baseui-38fc07b9a3bbb8b8_bg.wasm  baseui-3a70a11e705439a.js  baseui-3a70a11e705439a_bg.wasm  baseui-3fc6a714702a5e3a_bg.wasm  baseui-4cf0e7499f61c7a8.js  baseui-4cf0e7499f61c7a8_bg.wasm  baseui-51da27b77b6056e.js  baseui-51da27b77b6056e_bg.wasm  baseui-5448f1df4ef7ab38.js  baseui-5448f1df4ef7ab38_bg.wasm  baseui-8bb5725c6ed8d4b3.js  baseui-8bb5725c6ed8d4b3_bg.wasm  baseui-8f8664d2ff237ba.js  baseui-8f8664d2ff237ba_bg.wasm  baseui-9b88f0a1f4bba2c4.js  baseui-9b88f0a1f4bba2c4_bg.wasm  baseui-a08ea63d0ca76369.js  baseui-a08ea63d0ca76369_bg.wasm  baseui-a250cd2e3af4c78b.js  baseui-a250cd2e3af4c78b_bg.wasm  baseui-a368fbad39560930.js  baseui-a368fbad39560930_bg.wasm  baseui-a4d57b147c41a166.js  baseui-a4d57b147c41a166_bg.wasm  baseui-c6482114a9937aec_bg.wasm  baseui-c65478d5cb66a7ea.js  baseui-c65478d5cb66a7ea_bg.wasm  baseui-c7ea6d94ec673496.js  baseui-c7ea6d94ec673496_bg.wasm  baseui-cdcd2f03fe6330b4.js  baseui-cdcd2f03fe6330b4_bg.wasm  (+21 more)
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: pages.yml  robot_rtic_rust.yml  robot_rust.yml  rust.yml  slamrs_pages.yml  slamrs_rust.yml
baseui/: Cargo.toml
baseui/src/: app.rs  config.rs  editor.rs  lib.rs  main.rs
baseui/src/graphics/: shaperenderer.rs
baseui/src/node/: controls.rs  frame_viz.rs  mod.rs  mouse_position.rs  shape_rendering.rs  visualize.rs
baseui/src/node/neato/: fileloader.rs  frame_viz.rs  mod.rs  serial.rs
common/: Cargo.toml
common/src/: lib.rs  math.rs  node.rs  robot.rs
config/: grid_slam.yaml  neato.yaml  test.yaml
graphics/: Cargo.toml
graphics/src/: gl.rs  lib.rs  primitiverenderer.rs  shader.rs  shaperenderer.rs
neato/: Cargo.toml
neato/src/: fileloader.rs  frame.rs  lib.rs  serial.rs
pubsub/src/: lib.rs
simulator/: Cargo.toml
simulator/src/: lib.rs  sensor.rs  sim.rs
simulator/src/scene/: ray.rs
slam/: Cargo.toml
slam/src/: icp.rs  lib.rs  pointmap.rs  scan_matching.rs
slam/src/grid/: map.rs  math.rs  mod.rs  node.rs  particle.rs  slam.rs
slamrs/: Cargo.toml  Justfile
slamrs-message/: Cargo.toml
slamrs-message/src/: lib.rs
slamrs-robot/: Cargo.toml  README.md
slamrs-robot-rtic/: Cargo.toml
slamrs-robot-rtic/.cargo/: config.toml
slamrs-robot-rtic/firmware/: Cargo.toml  build.rs
slamrs-robot-rtic/firmware/.cargo/: config.toml
slamrs-robot-rtic/firmware/pio/: encoder.pio
slamrs-robot-rtic/firmware/src/: encoder.rs  main.rs  message.rs  motor.rs  util.rs  ws2812b.rs
slamrs-robot-rtic/firmware/src/tasks/: esp.rs  heartbeat.rs  mod.rs  motors.rs  neato.rs  usb.rs
slamrs-robot-rtic/src/: main.rs
slamrs-robot/.cargo/: config.toml
slamrs-robot/src/: main.rs
slamrs/.cargo/: config.toml
slamrs/baseui/: Cargo.toml  index.html
slamrs/baseui/src/: app.rs  config.rs  editor.rs  main.rs
slamrs/baseui/src/node/: controls.rs  frame_viz.rs  gamepad.rs  gaussian.rs  mod.rs  mouse_position.rs  shape_rendering.rs  splitter.rs  visualize.rs
slamrs/common/: Cargo.toml
slamrs/common/src/: gaussian.rs  lib.rs  math.rs  node.rs  robot.rs  world.rs
slamrs/config/: gaussian_test.yaml  grid_slam.yaml  icp_test.yaml  landmark_extraction.yaml  landmarks.yaml  neato.yaml  neato_grid_slam.yaml  shape_test.yaml  test.yaml
slamrs/graphics/: Cargo.toml
slamrs/graphics/src/: camera.rs  gl.rs  primitiverenderer.rs  shader.rs  shaperenderer.rs
slamrs/neato/: Cargo.toml
slamrs/neato/src/: connection.rs  fileloader.rs  frame.rs  lib.rs  network.rs  serial.rs
slamrs/pubsub/: Cargo.toml
slamrs/pubsub/src/: lib.rs
slamrs/simulator/: Cargo.toml
slamrs/simulator/src/: lib.rs  sim.rs
slamrs/simulator/src/scene/: landmark.rs  mod.rs  ray.rs
slamrs/slam/: Cargo.toml
slamrs/slam/src/: icp.rs  lib.rs  pointmap.rs
slamrs/slam/src/extraction/: extract.rs  mod.rs  node.rs
slamrs/slam/src/grid/: map.rs  node.rs  ray.rs  slam.rs
slamrs/slam/src/landmark/: ekf.rs  mod.rs  node.rs
src/: app.rs  camera.rs  lib.rs  main.rs
src/graphics/: camera.rs  mod.rs  primitiverenderer.rs  shader.rs  shaperenderer.rs
src/node/: mod.rs  shape_rendering.rs
src/node/neato/: fileloader.rs  frame.rs  serial.rs
src/pubsub/: mod.rs
