[workspace]
members = [
    "baseui",
    "pubsub",
    "graphics",
    "common",
    "simulator",
    "slam",
]
default_members = ["baseui"]


[workspace.dependencies]
pubsub = {path = "./pubsub"}
graphics = {path = "./graphics"}
common = {path = "./common"}
neato = {path = "./neato"}
simulator = {path = "./simulator"}
slam = {path = "./slam"}

egui = "0.20.0"
glow = "0.11"
nalgebra = "0.32.1"
anyhow = "1.0.68"

# [profile.release]
# opt-level = 2 # fast and small wasm

[profile.release]
debug = true

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 3


[patch.crates-io]

# If you want to use the bleeding edge version of egui and eframe:
# egui = { git = "https://github.com/emilk/egui", branch = "master" }
# eframe = { git = "https://github.com/emilk/egui", branch = "master" }

# If you fork https://github.com/emilk/egui you can test with:
# egui = { path = "../egui/crates/egui" }
# eframe = { path = "../egui/crates/eframe" }
