[package]
name = "baseui"
version = "0.1.0"
edition = "2021"
rust-version = "1.65"


[dependencies]
egui = {workspace = true}
eframe = { version = "0.22.0", default-features = false, features = [
    #"accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    # "persistence",   # Enable restoring app state when restarting the app.
] }

glow = {workspace = true}

# You only need serde if you want app persistence:
# serde = { version = "1", features = ["derive"] }
nalgebra = {workspace = true}
anyhow = {workspace = true}
serde = {workspace = true}
serde_yaml = {workspace = true}
log = {workspace = true}

pubsub = {workspace = true}
graphics = {workspace = true}
common = {workspace = true}
simulator = {workspace = true}
slam = {workspace = true}


# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"

# neato package connects to serial port and allows openin files so skip it on
# the web for now
neato = {workspace = true}

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"
wasm-bindgen-futures = "0.4"

# needed to get rand crate to work with WASM
# see https://github.com/rust-random/rand#wasm-support
# and https://docs.rs/getrandom/latest/getrandom/#webassembly-support
getrandom = { version = "0.2", features = ["js"] }
