[package]
name = "simulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# local dependencies
pubsub = {workspace = true}
common = {workspace = true}
graphics = {workspace = true}

# inherited dependencies
# anyhow = {workspace = true}
egui = {workspace = true}
nalgebra = {workspace = true}
serde = {workspace = true}

# special dependencies for this crate
web-time = { workspace = true }
