[package]
name = "slamrs-message"
version = "0.1.0"
edition = "2021"

[features]
defmt = ["dep:defmt"]
std = ["bincode/std"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = { version = "2.0", default-features = false , features = ["derive"] }

defmt = { version = "1.0", optional = true }
