[package]
name = "slamers-robot"
version = "0.1.0"
edition = "2021"
resolver = "2"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
defmt = "=0.3.5"

embedded-hal = "0.2.3"
embedded-hal-async = { version = "1.0.0-rc.1" }

esp32-hal = { version = "0.15.0", features = [ "rt", "async", "embassy", "embassy-time-timg0" ] }
smoltcp = { version = "0.10.0", default-features=false, features = ["proto-igmp", "proto-ipv4", "socket-tcp", "socket-icmp", "socket-udp", "medium-ethernet", "proto-dhcpv4", "socket-raw", "socket-dhcpv4"] }

log = "0.4.18"
embedded-svc = { version = "0.25.1", default-features = false, features = [] }
embedded-io = "0.4.0"
embedded-io-async = "0.5.0"
heapless = { version = "0.7.16", default-features = false }
embassy-sync = { version = "0.2.0" }
embassy-futures = { version = "0.1.0" }
embassy-net = { version = "0.1.0", features = ["nightly", "tcp", "udp", "dhcpv4", "medium-ethernet"] }



bleps = { git = "https://github.com/bjoernQ/bleps", package = "bleps", rev = "b82f1e7009bef7e32f0918be5b186188aa5e7109", features = ["macros"] }

embassy-executor = { version = "0.3.0", package = "embassy-executor", features = ["nightly",  "arch-xtensa", "executor-thread", "integrated-timers"] }
embassy-time = { version = "0.1.3", features = ["nightly"] }

futures-util = { version = "0.3.28", default-features = false }
esp-println = { version = "0.6.0" , features = ["log"]}
esp-backtrace = { version = "0.8.0", features = ["panic-handler", "exception-handler", "print-uart", "esp32"] }

esp-wifi = {  features = ["esp32", "utils", "embassy-net", "embedded-svc", "async", "wifi"], git = "https://github.com/esp-rs/esp-wifi", package = "esp-wifi", rev = "0d502eb66ad0db4607844f81ac2eb5cfedc7e0c3"  }


[profile.release]
# Explicitly disable LTO which the Xtensa codegen backend has issues
lto = "off"
opt-level = 3

[profile.dev]
# Explicitly disable LTO which the Xtensa codegen backend has issues
lto = "off"
# Turn on a small amount of optimisation in development mode.
opt-level = 1

[profile.dev.package.esp-wifi]
opt-level = 3

[profile.dev.package."*"]
# Full optimization for dependencies
opt-level = 3