[package]
name = "slamers-robot"
version = "0.1.0"
edition = "2021"
resolver = "2"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
defmt = "=0.3.5"

embedded-hal = "0.2.7"
embedded-hal-async = { version = "1.0.0-rc.1" }

esp32-hal = { version = "0.16.0", features = [ "rt", "async", "embassy", "embassy-executor-thread", "embassy-time-timg0" ] }
smoltcp = { version = "0.10.0", default-features=false, features = ["proto-igmp", "proto-ipv4", "socket-tcp", "socket-icmp", "socket-udp", "medium-ethernet", "proto-dhcpv4", "socket-raw", "socket-dhcpv4"] }

log = "0.4.20"
embedded-svc = { version = "0.26.4", default-features = false, features = [] }
embedded-io = "0.6.1"
embedded-io-async = "0.6.0"
heapless = { version = "0.7.16", default-features = false }
embassy-sync = { version = "0.4.0" }
embassy-futures = { version = "0.1.0" }
embassy-net = { version = "0.2.1", features = ["nightly", "tcp", "udp", "dhcpv4", "medium-ethernet"] }



bleps = { git = "https://github.com/bjoernQ/bleps", package = "bleps", rev = "0db8fcb", features = ["macros"] }

embassy-executor = { version = "0.3.3", package = "embassy-executor", features = ["nightly", "executor-thread", "integrated-timers"] }
embassy-time = { version = "0.1.3", features = ["nightly"] }

futures-util = { version = "0.3.29", default-features = false }
esp-println = { version = "0.7.1" , features = ["log"]}
esp-backtrace = { version = "0.9.0", features = ["panic-handler", "exception-handler", "print-uart", "esp32"] }

esp-wifi = {  features = ["esp32", "utils", "embassy-net", "embedded-svc", "async", "wifi"], git = "https://github.com/esp-rs/esp-wifi", package = "esp-wifi", rev = "8574d00cab3f88feac9c1afc19932dd02a9d83d6"  }

slamers-message = { path = '../slamers-message'}
bincode = {version = "2.0.0-rc.3", default-features = false , git="https://github.com/bincode-org/bincode",rev = "aada4bb4cb457677a4b8e47572ae7ca8dd44927c"}
static_cell = {version = "2.0.0", features = ["nightly"] }


[profile.release]
# Explicitly disable LTO which the Xtensa codegen backend has issues
lto = "off"
opt-level = 3

[profile.dev]
# Explicitly disable LTO which the Xtensa codegen backend has issues
lto = "off"
# Turn on a small amount of optimisation in development mode.
opt-level = 1

[profile.dev.package.esp-wifi]
opt-level = 3

[profile.dev.package."*"]
# Full optimization for dependencies
opt-level = 3
