[package]
edition = "2021"
name = "slamrs-robot-rtic"
version = "0.1.0"
authors = ["antbern <40672068+antbern@users.noreply.github.com>"]
resolver = "2"

[dependencies]
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }

# embedded-hal = "1.0.0"
embedded-hal = "0.2"
# embedded-hal-async = "1.0.0"
# embedded-io = "0.6.1"
# embedded-io-async = "0.6.1"
#
cortex-m = { version = "0.7" }
cortex-m-rt = "0.7"

rtic = { version = "2.0.0", features = [ "thumbv6-backend" ] }
# portable-atomic = {version = "1.6.0", features=["critical-section"]}
rp-pico = "0.8"
rtic-monotonics = { version = "1.5", features = ["rp2040"] }
rtic-sync = "1.3"
# nb= { version = "1.0", features = ["defmt-0-3"]}
nb = "0.1"


