[package]
edition = "2021"
name = "slamrs-robot-rtic"
version = "0.1.0"
authors = ["antbern <40672068+antbern@users.noreply.github.com>"]
resolver = "2"

[dependencies]
library = { path = "../library" , features = ["defmt"]}
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }

embedded-hal = "1.0.0"
# embedded-hal-async = "1.0.0"
# embedded-io = "0.6.1"
# embedded-io-async = "0.6.1"

cortex-m = { version = "0.7" }
cortex-m-rt = "0.7"

rtic = { version = "2.0.0", features = [ "thumbv6-backend" ] }
# portable-atomic = {version = "1.6.0", features=["critical-section"]}
rp-pico = "0.9"
rtic-monotonics = { version = "2", features = ["rp2040"] }
rtic-sync = "1.3"
# nb= { version = "1.0", features = ["defmt-0-3"]}
nb = "0.1.3"
futures = { version = "0.3", default-features = false, features = ["async-await"] }

# for usb serial connection (update when the hal is updated)
usb-device = "0.3"
usbd-hid = "0.8"
usbd-serial = "0.2"

pwm-pca9685 = "1.0"

pio-proc = "0.2"
pio = "0.2"

fixed = "1.27"

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release]
debug = 2

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
