[package]
edition = "2021"
name = "slamrs-robot-rtic"
version = "0.1.0"
authors = ["antbern <40672068+antbern@users.noreply.github.com>"]
resolver = "2"

[dependencies]
library = { path = "../library" , features = ["defmt"]}
defmt = "1.0"
defmt-rtt = "1.0"
panic-probe = { version = "1.0", features = ["print-defmt"] }

embedded-hal = "1.0.0"
# embedded-hal-async = "1.0.0"
# embedded-io = "0.6"
# embedded-io-async = "0.6.1"
# nb = "1.1"

cortex-m = { version = "0.7" }
cortex-m-rt = "0.7"

rtic = { version = "2.1", features = [ "thumbv6-backend" ] }
portable-atomic = { version = "1", features = ["critical-section"] }

rp2040-boot2 = "0.3"
rp2040-hal = { version = "0.11", default-features = false, features = ["rtic-monotonic", "rt", "critical-section-impl", "rom-func-cache"] }
rtic-monotonics = { version = "2", features = ["rp2040"] }
rtic-sync = "1.3"
futures = { version = "0.3", default-features = false, features = ["async-await"] }

# for usb serial connection (update when the hal is updated)
usb-device = "0.3"
usbd-serial = "0.2"

pwm-pca9685 = "1.0"

pio-proc = "0.2"
pio = "0.2"

fixed = "1.27"

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release]
debug = 2

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
