[package]
name = "baseui"
version = "0.1.0"
edition = "2021"
rust-version = "1.71"


[dependencies]
eframe = { workspace = true }

# You only need serde if you want app persistence:
# serde = { version = "1", features = ["derive"] }
nalgebra = {workspace = true}
anyhow = {workspace = true}
serde = {workspace = true}
serde_yaml = {workspace = true}
log = {workspace = true}

web-time = { workspace = true }

pubsub = {workspace = true}
graphics = {workspace = true}
common = {workspace = true}
simulator = {workspace = true}
slam = {workspace = true}

gilrs = { version = "0.11" }

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"

# neato package connects to serial port and allows openin files so skip it on
# the web for now
neato = {workspace = true}

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
tracing-wasm = "0.2"
wasm-bindgen-futures = "0.4"

# needed to get rand crate to work with WASM
# see https://github.com/rust-random/rand#wasm-support
# and https://docs.rs/getrandom/latest/getrandom/#webassembly-support
getrandom = { version = "0.2", features = ["js"] }
