[package]
name = "common"
version = "0.1.0"
edition = "2021"
description = "Contains common definitions of Traits and Types used across the project."
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# local dependencies
pubsub = {workspace = true}
graphics = {workspace = true}

# inherited dependencies
eframe = {workspace = true}
nalgebra = {workspace = true}
statrs = {workspace = true}
rand = {workspace = true}


# special dependencies for this crate


[dev-dependencies]
approx = "0.5.1"
