[package]
name = "neato"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# local dependencies
pubsub = {workspace = true}
common = {workspace = true}

# inherited dependencies
anyhow = {workspace = true}
egui = {workspace = true}
serde = {workspace = true}
tracing = {workspace = true}

# special dependencies for this crate
serial2 = "0.1.7"

rfd = "0.13.0"

bincode = {workspace = true}
slamrs-message = {workspace = true}
