[package]
name = "slam"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# local dependencies
pubsub = {workspace = true}
common = {workspace = true}
graphics = {workspace = true}

# inherited dependencies
anyhow = {workspace = true}
egui = {workspace = true}
nalgebra = {workspace = true}
serde = {workspace = true}

rand = {workspace = true}

tracing = {workspace = true}

# special dependencies for this crate
lstsq = "0.5.0"
# the feature is using a different nalgebra version which makes it useles...
# kd-tree = { version = "0.5.1", features = ["nalgebra"] }
kd-tree = { version = "0.5.3"}
itertools = "0.12.1"

[dev-dependencies]
approx = "0.5.1"
