[package]
name = "slam"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# local dependencies
pubsub = {workspace = true}
common = {workspace = true}
graphics = {workspace = true}

# inherited dependencies
anyhow = {workspace = true}
eframe = {workspace = true}
nalgebra = {workspace = true}
serde = {workspace = true}
log = {workspace = true}

rand = {workspace = true}

tracing = {workspace = true}

# special dependencies for this crate
lstsq = "0.6.0"
# the feature is using a different nalgebra version which makes it useles...
# kd-tree = { version = "0.5.1", features = ["nalgebra"] }
kd-tree = { version = "0.6.0"}
itertools = "0.14.0"

web-time = { workspace = true }

[dev-dependencies]
approx = "0.5.1"
